<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App_Options.ContactFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="358dp" />

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/card_background"
        android:clipToPadding="false"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:radius="24dp">

        <!-- Add your card content here -->

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quick Contact"
            android:layout_gravity="center"
            android:textColor="@color/purple"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/cardContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="Message"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="Send Message"
            android:background="@drawable/button_background2"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />


    </LinearLayout>




</RelativeLayout>
