<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:animateLayoutChanges="true">

    <!-- Stopwatch Hours -->
    <TextView
        android:id="@+id/textView_stopwatch_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:"
        android:textSize="50sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_stopwatch_m"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp" />

    <!-- Stopwatch Minutes -->
    <TextView
        android:id="@+id/textView_stopwatch_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:"
        android:textSize="50sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/textView_stopwatch_h"
        app:layout_constraintStart_toEndOf="@id/textView_stopwatch_h"
        app:layout_constraintEnd_toStartOf="@id/textView_stopwatch_s" />

    <!-- Stopwatch Seconds -->
    <TextView
        android:id="@+id/textView_stopwatch_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:"
        android:textSize="50sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/textView_stopwatch_m"
        app:layout_constraintStart_toEndOf="@id/textView_stopwatch_m"
        app:layout_constraintEnd_toStartOf="@id/textView_stopwatch_10ms" />

    <!-- Stopwatch Milliseconds -->
    <TextView
        android:id="@+id/textView_stopwatch_10ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:textSize="50sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/textView_stopwatch_s"
        app:layout_constraintStart_toEndOf="@id/textView_stopwatch_s"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp" />

    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Buttons for controlling the stopwatch -->
        <Button
            android:id="@+id/button_start_stop_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:background="@color/DarkRed" />

        <Button
            android:id="@+id/button_stop_stop_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:background="@color/DarkRed"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_resume_stop_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resume"
            android:textColor="@android:color/white"
            android:background="@color/DarkRed"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_reset_stop_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:background="@color/DarkRed"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
